[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wikinet"
version = "0.1.0"
description = "Wikidata + Wikipedia family and political network crawler"
authors = [{name = "Stealth Founder", email = "founder@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "networkx>=3.1",
    "pydantic>=1.10",
    "rich>=13.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.8.0",
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
    "types-tqdm>=4.66.0",
]
visual = [
    "pydot>=2.0",
    "pygraphviz>=1.11",
]

[project.scripts]
wikinet = "wikinet.cli:main"

[tool.setuptools.packages.find]
include = ["wikinet*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["wikinet", "tests", "scripts"]

[tool.ruff.lint]
# E/F/I plus bugbear; omit UP to avoid churn across the whole codebase.
select = ["E", "F", "I", "B"]
ignore = ["B008", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
"scripts/generate_sample_uae.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "."
